ifds/src/tests/icfg/snapshots/ide__tests__icfg__convert__test_ir_chain_assign_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:\%0] (19) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:\%2] (18) at (3, 4) { };
\node[circle,fill,inner sep=1pt,label=left:\%3] (17) at (4, 4) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (16) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:\%2] (15) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (14) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (13) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (12) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (11) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (9) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (8) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (7) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (6) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (5) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(1, 1.0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Assign(2, 0)};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {Assign(3, 2)};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (11);
		\path[->, blue] (0) [bend right] edge  node { } (14);
		\path[->, blue] (0) [bend right] edge  node { } (15);
		\path[->, blue] (0) [bend right] edge  node { } (16);
		\path[->, blue] (0) [bend right] edge  node { } (17);
		\path[->, blue] (0) [bend right] edge  node { } (18);
		\path[->, blue] (0) [bend right] edge  node { } (19);
		\path[->] (0) edge (5);
		\path[->] (5) edge (6);
		\path[->] (6) edge (7);
		\path[->] (7) edge (8);
		\path[->] (8) edge (9);
		\path[->] (0) edge (11);
		\path[->] (7) edge (12);
		\path[->] (8) edge (13);
		\path[->] (11) edge (14);
		\path[->] (14) edge (15);
		\path[->] (14) edge (16);
		\path[->] (15) edge (17);
		\path[->] (15) edge (18);
		\path[->] (16) edge (19);


                \end{tikzpicture}
            \end{document}
