ifds/src/tests/icfg/snapshots/ide__tests__icfg__convert__test_ir_functions_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:\%0] (18) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (6) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (4) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (3) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (2) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Call(mytest, [0], [])};
\node[circle,fill,inner sep=1pt,label=left:taut] (19) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (17) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (16) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (15) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (14) at (3, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (13) at (3, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (12) at (3, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (11) at (3, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (10) at (3, 0) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (8) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (7) at (3, 0) { };
\node[font=\tiny] (note_2) at (1.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_3) at (1.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_4) at (1.5, 2.5) {Return([])};
\node[font=\tiny] (note_5) at (1.5, 0.5) {Const(0, 2.0)};
\node[font=\tiny] (note_6) at (1.5, 1.5) {Const(1, 3.0)};
\node[font=\tiny] (note_7) at (1.5, 2.5) {Return([])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (3);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (7) [bend right] edge  node { } (10);
		\path[->, blue] (7) [bend right] edge  node { } (11);
		\path[->, blue] (7) [bend right] edge  node { } (12);
		\path[->, blue] (7) [bend right] edge  node { } (13);
		\path[->, blue] (8) [loop right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (18);
		\path[->] (0) edge (2);
		\path[->] (2) edge (3);
		\path[->] (3) edge (4);
		\path[->] (0) edge (6);
		\path[->] (7) edge (10);
		\path[->] (10) edge (11);
		\path[->] (11) edge (12);
		\path[->] (12) edge (13);
		\path[->] (7) edge (14);
		\path[->] (14) edge (15);
		\path[->] (15) edge (16);
		\path[->] (16) edge (17);
		\path[->] (6) edge node { } (18);
		\path[->] (12) edge (19);


                \end{tikzpicture}
            \end{document}
