ifds/src/tests/icfg/snapshots/ide__tests__icfg__convert__test_ir_return_passed_value_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:\%1] (21) at (2, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (15) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (7) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (5) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (4) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (3) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(0, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Call(mytest, [0], [1])};
\node[circle,fill,inner sep=1pt,label=left:\%0] (18) at (5, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (16) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (14) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (13) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (12) at (4, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (11) at (4, 0) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (9) at (5, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (8) at (4, 0) { };
\node[font=\tiny] (note_2) at (2.5, 0.5) {Return([0])};
\node[font=\tiny] (note_3) at (2.5, 0.5) {Return([0])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (8) [bend right] edge  node { } (11);
		\path[->, blue] (8) [bend right] edge  node { } (12);
		\path[->, blue] (9) [loop right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (15);
		\path[->, blue] (9) [bend right] edge  node { } (18);
		\path[->, blue] (0) [bend right] edge  node { } (21);
		\path[->] (0) edge (3);
		\path[->] (3) edge (4);
		\path[->] (4) edge (5);
		\path[->] (0) edge (7);
		\path[->] (8) edge (11);
		\path[->] (11) edge (12);
		\path[->] (8) edge (13);
		\path[->] (13) edge (14);
		\path[->] (7) edge node { } (15);
		\path[->] (11) edge (16);
		\path[->] (9) edge (18);


                \end{tikzpicture}
            \end{document}
