ifds/src/tests/icfg/snapshots/ide__tests__icfg__convert__test_ir_self_loop_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:\%1] (47) at (2, 5) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (46) at (1, 5) { };
\node[circle,fill,inner sep=1pt,label=left:\%1] (45) at (2, 4) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (44) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (43) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:\%1] (42) at (2, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (38) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (37) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (36) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (35) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (34) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (33) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (32) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (31) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (30) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (29) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (28) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (27) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (26) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (25) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (24) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (23) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (22) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (21) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (20) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (19) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (18) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (17) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (16) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (13) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (12) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (11) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (9) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (8) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (7) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (6) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (5) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (4) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 1) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Const(2, 1.0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(0, 5.0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Call(test, [0], [1])};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {Assign(0, 1)};
\node[font=\tiny] (note_4) at (-1.5, 4.5) {Return([0])};
\node[font=\tiny] (note_5) at (-1.5, 0.5) {Const(2, 1.0)};
\node[font=\tiny] (note_6) at (-1.5, 1.5) {Const(0, 5.0)};
\node[font=\tiny] (note_7) at (-1.5, 2.5) {Call(test, [0], [1])};
\node[font=\tiny] (note_8) at (-1.5, 3.5) {Assign(0, 1)};
\node[font=\tiny] (note_9) at (-1.5, 4.5) {Return([0])};
\node[font=\tiny] (note_10) at (-1.5, 0.5) {Const(2, 1.0)};
\node[font=\tiny] (note_11) at (-1.5, 1.5) {Const(0, 5.0)};
\node[font=\tiny] (note_12) at (-1.5, 2.5) {Call(test, [0], [1])};
\node[font=\tiny] (note_13) at (-1.5, 3.5) {Assign(0, 1)};
\node[font=\tiny] (note_14) at (-1.5, 4.5) {Return([0])};
\node[font=\tiny] (note_15) at (-1.5, 0.5) {Const(2, 1.0)};
\node[font=\tiny] (note_16) at (-1.5, 1.5) {Const(0, 5.0)};
\node[font=\tiny] (note_17) at (-1.5, 2.5) {Call(test, [0], [1])};
\node[font=\tiny] (note_18) at (-1.5, 3.5) {Assign(0, 1)};
\node[font=\tiny] (note_19) at (-1.5, 4.5) {Return([0])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (4);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (11);
		\path[->, blue] (12) [bend right] edge  node { } (16);
		\path[->, blue] (12) [bend right] edge  node { } (17);
		\path[->, blue] (12) [bend right] edge  node { } (18);
		\path[->, blue] (12) [bend right] edge  node { } (19);
		\path[->, blue] (12) [bend right] edge  node { } (20);
		\path[->, blue] (12) [bend right] edge  node { } (21);
		\path[->, blue] (13) [loop right] edge  node { } (13);
		\path[->, blue] (0) [bend right] edge  node { } (30);
		\path[->, blue] (12) [bend right] edge  node { } (42);
		\path[->, blue] (13) [bend right] edge  node { } (43);
		\path[->, blue] (12) [bend right] edge  node { } (44);
		\path[->, blue] (12) [bend right] edge  node { } (45);
		\path[->, blue] (12) [bend right] edge  node { } (46);
		\path[->, blue] (12) [bend right] edge  node { } (47);
		\path[->] (0) edge (4);
		\path[->] (4) edge (5);
		\path[->] (5) edge (6);
		\path[->] (6) edge (7);
		\path[->] (7) edge (8);
		\path[->] (8) edge (9);
		\path[->] (0) edge (11);
		\path[->] (12) edge (16);
		\path[->] (16) edge (17);
		\path[->] (17) edge (18);
		\path[->] (18) edge (19);
		\path[->] (19) edge (20);
		\path[->] (20) edge (21);
		\path[->] (7) edge (22);
		\path[->] (8) edge (23);
		\path[->] (12) edge (24);
		\path[->] (24) edge (25);
		\path[->] (25) edge (26);
		\path[->] (26) edge (27);
		\path[->] (27) edge (28);
		\path[->] (28) edge (29);
		\path[->] (11) edge node { } (30);
		\path[->] (12) edge (31);
		\path[->] (31) edge (32);
		\path[->] (32) edge (33);
		\path[->] (33) edge (34);
		\path[->] (34) edge (35);
		\path[->] (35) edge (36);
		\path[->] (7) edge (37);
		\path[->] (8) edge (38);
		\path[->] (13) edge (43);
		\path[->] (42) edge (44);
		\path[->] (42) edge (45);
		\path[->] (44) edge (46);
		\path[->] (45) edge (47);


                \end{tikzpicture}
            \end{document}
