ifds/src/tests/icfg/snapshots/ide__tests__icfg__convert__test_ir_table_dot.snap
---
source: src/tests/icfg/convert.rs
expression: output

---
   \documentclass{standalone}
            \usepackage{pgf, tikz}
            \usetikzlibrary{arrows, automata}
            \begin{document}
                \begin{tikzpicture}
                    [node distance=3cm]
                    \tikzstyle{every state}=[
                        draw = black,
                        thick,
                        fill = white,
                        minimum size = 4mm
                    ]

                    \node[circle,fill,inner sep=1pt,label=left:\%0] (37) at (1, 1) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (36) at (1, 7) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (35) at (1, 7) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (34) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (33) at (1, 0) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (32) at (1, 9) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (31) at (1, 8) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (30) at (1, 7) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (29) at (1, 6) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (28) at (1, 5) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (27) at (1, 4) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (26) at (1, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (25) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (24) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (23) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (22) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (21) at (0, 8) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (20) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (19) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:\%0] (18) at (1, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (17) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (16) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (14) at (0, 10) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (13) at (0, 9) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (12) at (0, 8) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (11) at (0, 7) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (10) at (0, 6) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (9) at (0, 5) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (8) at (0, 4) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (7) at (0, 3) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (6) at (0, 2) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (5) at (0, 1) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (4) at (0, 0) { };
\node[circle,fill,inner sep=1pt,label=left:taut] (0) at (0, 0) { };
\node[font=\tiny] (note_0) at (-1.5, 0.5) {Block(0)};
\node[font=\tiny] (note_1) at (-1.5, 1.5) {Const(0, 1.0)};
\node[font=\tiny] (note_2) at (-1.5, 2.5) {Const(1, 2.0)};
\node[font=\tiny] (note_3) at (-1.5, 3.5) {Const(2, 3.0)};
\node[font=\tiny] (note_4) at (-1.5, 4.5) {Block(1)};
\node[font=\tiny] (note_5) at (-1.5, 5.5) {Const(1, 2.0)};
\node[font=\tiny] (note_6) at (-1.5, 6.5) {Const(2, 3.0)};
\node[font=\tiny] (note_7) at (-1.5, 7.5) {Block(2)};
\node[font=\tiny] (note_8) at (-1.5, 8.5) {Const(2, 4.0)};
\node[font=\tiny] (note_9) at (-1.5, 9.5) {Table([0, 1, 2, 2])};
		\path[->, blue] (0) [loop right] edge  node { } (0);
		\path[->, blue] (0) [bend right] edge  node { } (5);
		\path[->, blue] (0) [bend right] edge  node { } (6);
		\path[->, blue] (0) [bend right] edge  node { } (7);
		\path[->, blue] (0) [bend right] edge  node { } (8);
		\path[->, blue] (0) [bend right] edge  node { } (9);
		\path[->, blue] (0) [bend right] edge  node { } (10);
		\path[->, blue] (0) [bend right] edge  node { } (11);
		\path[->, blue] (0) [bend right] edge  node { } (12);
		\path[->, blue] (0) [bend right] edge  node { } (13);
		\path[->, blue] (0) [bend right] edge  node { } (14);
		\path[->, blue] (16) [bend right] edge  node { } (17);
		\path[->, blue] (16) [bend right] edge  node { } (18);
		\path[->, blue] (16) [bend right] edge  node { } (26);
		\path[->, blue] (16) [bend right] edge  node { } (27);
		\path[->, blue] (16) [bend right] edge  node { } (28);
		\path[->, blue] (16) [bend right] edge  node { } (29);
		\path[->, blue] (16) [bend right] edge  node { } (30);
		\path[->, blue] (16) [bend right] edge  node { } (31);
		\path[->, blue] (16) [bend right] edge  node { } (32);
		\path[->, blue] (16) [bend right] edge  node { } (33);
		\path[->, blue] (16) [bend right] edge  node { } (37);
		\path[->] (0) edge (4);
		\path[->] (4) edge (5);
		\path[->] (5) edge (6);
		\path[->] (6) edge (7);
		\path[->] (7) edge (8);
		\path[->] (8) edge (9);
		\path[->] (9) edge (10);
		\path[->] (10) edge (11);
		\path[->] (11) edge (12);
		\path[->] (12) edge (13);
		\path[->] (13) edge (14);
		\path[->] (0) edge (16);
		\path[->] (16) edge (18);
		\path[->] (0) edge (19);
		\path[->] (8) edge (20);
		\path[->] (11) edge (21);
		\path[->, bend right] (13) edge (22);
		\path[->, bend right] (13) edge (23);
		\path[->, bend right] (13) edge (24);
		\path[->, bend right] (13) edge (25);
		\path[->] (18) edge (26);
		\path[->] (26) edge (27);
		\path[->] (27) edge (28);
		\path[->] (28) edge (29);
		\path[->] (29) edge (30);
		\path[->] (30) edge (31);
		\path[->] (31) edge (32);
		\path[->, bend right] (32) edge (33);
		\path[->, bend right] (32) edge (34);
		\path[->, bend right] (32) edge (35);
		\path[->, bend right] (32) edge (36);
		\path[->] (33) edge (37);


                \end{tikzpicture}
            \end{document}
